# tokenbbq

./: .gitignore  AGENTS.md  AUDIT.md  CCUSAGE_PARITY_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  tsdown.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: 2026-05-08-widget-claude-auth-research.md
docs/superpowers/plans/: 2026-04-23-project-and-persistence.md  2026-04-30-codex-rate-limits-pill-toggle.md
scripts/: build-sidecar.mjs  inline-dashboard-icon.mjs  inline-vendor.mjs  inline-wasm.mjs  run-tests.mjs
src/: aggregator.test.ts  aggregator.ts  cli-output.ts  dashboard.ts  index.ts  pricing.test.ts  pricing.ts  project.test.ts  project.ts  server.test.ts  server.ts  store.test.ts  store.ts  types.test.ts  types.ts
src/loaders/: amp.ts  antigravity.ts  cache.test.ts  cache.ts  claude.test.ts  claude.ts  codex.test.ts  codex.ts  gemini.test.ts  gemini.ts  index.ts  opencode.ts  pi.test.ts  pi.ts
widget/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
widget/src/: dev-overlay.ts  main.ts  source-toggle.ts  styles.css  types.ts  ui.ts  update.ts  usage-state.ts
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/icons/: icon.icns
widget/src-tauri/src/: api_types.rs  commands.rs  lib.rs  main.rs
widget/tests/: usage-state.test.ts
(+2 files in other folders)
